--- a/index.html
+++ b/index.html
@@ -13,47 +13,65 @@
   <section class="hero-banner">
     <div class="hero-track" aria-label="Promotions">
       <article class="hero-slide" data-slide="1">
-        <div class="hero-overlay">
-          <div class="hero-kicker">AhamStree</div>
-          <h1 class="hero-title">Timeless sarees. Modern styling.</h1>
-          <p class="hero-subtitle">Festive • Wedding • Everyday elegance</p>
-          <div class="hero-cta">
-            <a class="btn" href="products.html">Shop Sarees</a>
-            <a class="btn secondary" href="new-arrivals.html">New Arrivals</a>
-          </div>
-        </div>
+  <picture class="hero-media">
+    <source media="(max-width: 768px)" srcset="assets/images/banners/hero-1-launch-m.jpg">
+    <img src="assets/images/banners/hero-1-launch.jpg" alt="Launching Soon - New Saree Edit" loading="eager">
+  </picture>
 
-        <!-- Floating banners -->
-        <div class="float-badges" aria-hidden="true">
-          <div class="float-badge b1">Free Shipping ₹999+</div>
-          <div class="float-badge b2">Easy Returns</div>
-          <div class="float-badge b3">New Drop</div>
-        </div>
-      </article>
+  <div class="hero-overlay">
+    <div class="hero-kicker">Launching Soon</div>
+    <h1 class="hero-title">A New Saree Edit</h1>
+    <p class="hero-subtitle">Handwoven • Limited pieces • Modern drapes</p>
+
+    <div class="hero-cta">
+      <a class="btn" href="collections.html">Notify Me</a>
+    </div>
+  </div>
+
+  <div class="float-badges" aria-hidden="true">
+    <div class="float-badge b1">Limited Drop</div>
+    <div class="float-badge b2">Craft First</div>
+    <div class="float-badge b3">Coming Soon</div>
+  </div>
+</article>
+
 
       <article class="hero-slide" data-slide="2">
-        <div class="hero-overlay">
-          <div class="hero-kicker">Handpicked</div>
-          <h2 class="hero-title">Silk sarees for celebrations</h2>
-          <p class="hero-subtitle">Kanjivaram • Banarasi • Pure Silk</p>
-          <div class="hero-cta">
-            <a class="btn" href="products.html#silk">Shop Silk</a>
-            <a class="btn secondary" href="collections.html">Explore Collections</a>
-          </div>
-        </div>
-      </article>
+  <picture class="hero-media">
+    <source media="(max-width: 768px)" srcset="assets/images/banners/hero-2-welcome10-m.jpg">
+    <img src="assets/images/banners/hero-2-welcome10.jpg" alt="10% Off for New Users" loading="lazy">
+  </picture>
+
+  <div class="hero-overlay">
+    <div class="hero-kicker">Welcome Offer</div>
+    <h2 class="hero-title">Flat 10% OFF</h2>
+    <p class="hero-subtitle">On your first order • No minimum spend</p>
+
+    <div class="hero-cta">
+      <a class="btn" href="products.html">Shop Now</a>
+      <span class="hero-note">Use code: <strong>WELCOME10</strong></span>
+    </div>
+  </div>
+</article>
+
 
       <article class="hero-slide" data-slide="3">
-        <div class="hero-overlay">
-          <div class="hero-kicker">Everyday Edit</div>
-          <h2 class="hero-title">Cotton & Silk-Cotton staples</h2>
-          <p class="hero-subtitle">Breathable • Elegant • Easy to drape</p>
-          <div class="hero-cta">
-            <a class="btn" href="products.html#cotton">Shop Cotton</a>
-            <a class="btn secondary" href="sale.html">Sale</a>
-          </div>
-        </div>
-      </article>
+  <picture class="hero-media">
+    <source media="(max-width: 768px)" srcset="assets/images/banners/hero-3-collection-m.jpg">
+    <img src="assets/images/banners/hero-3-collection.jpg" alt="New Collection" loading="lazy">
+  </picture>
+
+  <div class="hero-overlay">
+    <div class="hero-kicker">New Collection</div>
+    <h2 class="hero-title">Fresh arrivals, timeless weaves</h2>
+    <p class="hero-subtitle">Silk • Cotton • Festive classics</p>
+
+    <div class="hero-cta">
+      <a class="btn" href="new-arrivals.html">Explore</a>
+    </div>
+  </div>
+</article>
+
     </div>
 
     <div class="hero-dots" role="tablist" aria-label="Hero carousel controls">
