--- a/products.html
+++ b/products.html
@@ -27,11 +27,12 @@
 
   
   <script type="module">
-    import { renderHeader, renderFooter } from "./assets/ui.js";
+    import { renderHeader, renderFooter, hydrateHeaderAuth } from "./assets/ui.js";
     import { supabase } from "./assets/supabase.js";
 
     document.getElementById("header").innerHTML = renderHeader("products");
     document.getElementById("footer").innerHTML = renderFooter();
+    hydrateHeaderAuth();
 
     async function loadProducts() {
       const status = document.getElementById("status");
