--- a/search.html
+++ b/search.html
@@ -25,11 +25,12 @@
   <div id="footer"></div>
 
   <script type="module">
-    import { renderHeader, renderFooter } from "./assets/ui.js";
+    import { renderHeader, renderFooter, hydrateHeaderAuth } from "./assets/ui.js";
     import { supabase } from "./assets/supabase.js";
 
     document.getElementById("header").innerHTML = renderHeader("");
     document.getElementById("footer").innerHTML = renderFooter();
+    hydrateHeaderAuth();
 
     const q = document.getElementById("q");
     const results = document.getElementById("results");
