--- a/checkout.html
+++ b/checkout.html
@@ -84,7 +84,7 @@
 
         <div style="height:14px;"></div>
 
-        <button class="btn" type="submit" id="payBtn" style="width:100%;">Pay with Razorpay</button>
+        <button class="btn" type="button" id="payBtn" style="width:100%;">Pay with Razorpay</button>
         <div id="status" class="small" style="margin-top:10px;"></div>
 
         <div class="small" style="margin-top:12px; opacity:.8;">
